[FIX] Update the keyboard in French and shift in simple view
We add a French version of the keyboard, which will be selected
automatically depending on the user's lang.
We also add a shift key for the simple version of the keyboard,
that allow user to fully complete a customer's sheet.

--- a/addons/point_of_sale/static/src/css/keyboard.css
+++ b/addons/point_of_sale/static/src/css/keyboard.css
@@ -117,6 +117,9 @@
     margin-left: auto !important;
     margin-right: auto !important;
 }
+.pos .fr{
+  width: 605px !important;
+}
 .pos .simple_keyboard li{
     margin: 0 5px 5px 0 !important;
     width: 49px;
@@ -132,12 +135,22 @@
 .pos .simple_keyboard .delete{
     width: 103px;
 }
+.pos .fr_delete {
+    width: 130px !important;
+}
 .pos .simple_keyboard .return{
     width: 103px;
+}
+.pos .fr_return{
+    width: 130px !important;
 }
 .pos .simple_keyboard .space{
     width:273px;
 }
 .pos .simple_keyboard .numlock{
     width:103px;
+}
+.pos .simple_keyboard .shift{
+    width: 49px;
+    height: 49px;
 }
